--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "connected-react-router": "6.8.0",
+    "firebase": "^9.6.1",
     "global": "^4.4.0",
     "history": "4.10.1",
     "immer": "^9.0.7",
