--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.1",
