[docs] 서비스 워커 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Zzz",
-  "name": "Create React App Sample",
+  "name": "Zzz App",
   "icons": [
     {
       "src": "favicon.ico",
