--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,7 @@
       "sizes": "512x512"
     }
   ],
+  "prefer_related_applications": true,
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
