[feat] button element 추가

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,9 +17,10 @@
       "type": "image/png",
       "sizes": "512x512"
     }
+  
   ],
   "prefer_related_applications": true,
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
