[docs] 로그인 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,31 @@
 {
   "short_name": "Zzz",
-  "name": "Zzz App",
+  "name": "Zzz",
+  "description": "잠이 드는 시간 Zzz",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/icon",
+      "purpose": "any maskable"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   
   ],
   "prefer_related_applications": true,
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#101340",
   "background_color": "#ffffff"
 }
