--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.2.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -23,6 +24,7 @@
     "react-ga": "^3.3.0",
     "react-kakao-login": "^2.1.0",
     "react-modal": "^3.14.4",
+    "react-pwa-install": "^1.0.12",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.1",
     "react-scripts": "^5.0.0",
